# ethos

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  NEWS.md  README.md  TODO.txt  configure.sh  example  mk_atc  stages.txt  type_system_sketch.txt  user_manual.md  user_manual.txt  user_manual_mine.md
.github/workflows/: main.yml
build-debug/: debug_smt_meta  eo_substitute.py  install_logos  install_logos_mini  mkscripts  run_gen_desugar_all  run_gen_lean  run_gen_lean_all  run_gen_lean_single  run_gen_model_smt  run_gen_pc_valid  run_gen_smt_model  run_gen_sygus  run_gen_sygus_all  run_gen_vc  run_gen_vc_all  run_gen_vc_all_alethe  run_gen_vc_all_cpc  run_gen_vc_single  run_plugin  run_sygus_cex  run_test_plugin  run_trim_defs  run_v1.txt
contrib/: alfc_compile  alfc_gen_and_check.sh  alfc_test_compile  check_with_input  compiled-save.cpp  eo_format.py  get_performance_proof
contrib/drat_trim/: mk_drat_trim.sh
plugins/: meta_reduce_plugin.cpp  meta_reduce_plugin.h  std_plugin.cpp  std_plugin.h  utils.cpp  utils.h
plugins/cpp_compiler/: README.md  compiled.cpp  compiler.cpp  compiler.h  executor.cpp  executor.h
plugins/desugar/: desugar.cpp  desugar.h  desugar_checker.cpp  desugar_checker.h  desugar_proof.cpp  desugar_proof.h  eo_builtin_smt.eo  eo_desugar.eo  eo_desugar_checker.eo  eo_desugar_native.eo  eo_desugar_smt.eo  native_embed.eo  smt_embed.eo
plugins/flatten_eval/: flatten_eval.cpp  flatten_eval.h
plugins/lean_meta/: lean_meta.lean  lean_meta_checker.lean  lean_meta_checker_term.lean  lean_meta_lemmas.lean  lean_meta_reduce.h  (+7 more)
proofs/: CMakeLists.txt
smtlibTests/: SEQ011_size3.smt2  cong.smt2  cong_arith.smt2  datatype.smt2  define-fun.smt2  haniel.smt2  haniel2.smt2  lin-arith-simple.smt2  mini-unsat.smt2  policy_variable.smt2  quant-sk.smt2  re_unfold_pos.smt2  resolve.smt2  simple-quant.smt2
src/: CMakeLists.txt  attr.cpp  attr.h  cmd_parser.cpp  cmd_parser.h  compiled.cpp  compiler.cpp  compiler.h  error.h  executor.cpp  executor.h  expr.cpp  expr.h  expr_builder.cpp  expr_builder.h  expr_info.cpp  expr_info.h  expr_parser.cpp  expr_parser.h  expr_trie.h  input.cpp  input.h  integer.cpp  integer.h  kind.cpp  kind.h  lexer.cpp  lexer.h  literal.cpp  literal.h  main.cpp  main_eoc.cpp  main_runner.cpp  main_runner.h  parser.cpp  parser.h  plugin.h  rational.cpp  rational.h  state.cpp  (+7 more)
src/base/: check.cpp  check.h  exception.cpp  exception.h  output.cpp  output.h  run.cpp  run.h
src/util/: bitvector.cpp  bitvector.h  filesystem.cpp  filesystem.h  integer.cpp  integer.h  rational.cpp  rational.h  string.cpp  string.h
tests/: Arith-rules.eo  Arith-rules.smt2  Arith-rules.smt3  Arith-theory.eo  Arith-theory.smt2  Arith-theory.smt3  Booleans-rules.eo  Booleans-rules.smt2  Booleans-rules.smt3  Bools.eo  Bools.smt2  Builtin-rules.eo  Builtin-rules.smt2  Builtin-rules.smt3  Builtin-theory.eo  Builtin-theory.smt2  Builtin-theory.smt3  CMakeLists.txt  Datatypes-theory.eo  Datatypes-theory.smt2  Datatypes-theory.smt3  Nary.eo  Nary.smt2  Nary.smt3  Quantifiers-rules.eo  Quantifiers-rules.smt2  Quantifiers-rules.smt3  Quantifiers-theory.eo  Quantifiers-theory.smt2  Quantifiers-theory.smt3  Sets-theory.eo  Sets-theory.smt2  Sets-theory.smt3  Strings-programs.eo  Strings-programs.smt2  Strings-programs.smt3  Strings-theory.eo  Strings-theory.smt2  Strings-theory.smt3  Uf-rules.eo  (+357 more)
(+101 files in other folders)
